Section Spacing Fixes

--- a/styles.css
+++ b/styles.css
@@ -794,7 +794,7 @@ ul {
 @media only screen and (min-width: 768px) {
 
     .main {
-        height: 100%;
+        height: 100vh;
     }
 
     .main::after {
@@ -851,8 +851,16 @@ ul {
         font-size: 22px;
     }
 
+    .skills-submenu > .languages-container > li,
+    .skills-submenu > .libraries-container > li,
+    .skills-submenu > .frameworks-container > li,
+    .skills-submenu  > .tools-container > li {
+        font-size: 14px;
+    }
+
     .project-container {
         margin-left: 72px;
+        margin-bottom: 16px;
         padding-left: 0px;
         padding-right: 0px;
     }
@@ -882,6 +890,10 @@ ul {
 
     .contact-info {
         margin-bottom: 40px;
+    }
+
+    .divider {
+        height: 1px;
     }
 } 
 
@@ -1269,12 +1281,12 @@ ul {
 
     .project-container {
         width: 50%;
-        margin-left: 122px;
+        margin-left: 127px;
         justify-content: left;
     }
 
     .project-container > a:not(:last-of-type) {
-        margin-right: 50px;
+        margin-right: 39px;
     }
 
     .project {
@@ -1450,7 +1462,6 @@ ul {
 
     .divider {
         width: 69%;
-        height: 2px;
         margin-left: 126px;
     }
 
@@ -1486,7 +1497,7 @@ ul {
 
     .project-container {
         width: 50%;
-        margin-left: 136px;
+        margin-left: 143px;
     }
 
     .project-container > a:not(:last-of-type) {
@@ -1571,7 +1582,6 @@ ul {
         font-weight: 400;
         font-size: 20px;
     }
-
 } 
 
 /* Very Large devices (laptops/desktops, 1920px and up) */
@@ -1692,7 +1702,6 @@ ul {
 
     .divider {
         width: 69%;
-        height: 2px;
         margin-left: 170px;
     }
 
@@ -1728,7 +1737,7 @@ ul {
 
     .project-container {
         width: 50%;
-        margin-left: 184px;
+        margin-left: 188px;
     }
 
     .project {
